fix fastest lap not showing up when on striped row

--- a/app/leaderboard/static/leaderboard/global.css
+++ b/app/leaderboard/static/leaderboard/global.css
@@ -150,5 +150,5 @@ body {
 }
 
 .fastest-lap {
-    color: #b200ff;
+    color: #b200ff !important;
 }
